--- a/client/src/app/pages/common-components/side-panel/side-panel.html
+++ b/client/src/app/pages/common-components/side-panel/side-panel.html
@@ -1,4 +1,4 @@
-<div class="flex flex-column h-full surface-section pt-6 justify-content-between">
+<div class="flex flex-column w-full h-full surface-section pt-6 justify-content-between">
   <div>
     <div class="text-center py-4 surface-border">
       <p-avatar icon="pi pi-user" size="xlarge" shape="circle"></p-avatar>
@@ -6,7 +6,7 @@
       <p class="text-600 text-sm">Portfolio</p>
     </div>
 
-    <p-panelMenu [model]="items" class="w-full px-3"></p-panelMenu>
+    <app-buttons></app-buttons>
   </div>
 
   <div class="grid gap-2 pb-5 pl-5">
