--- a/client/src/app/pages/common-components/side-panel/side-panel.html
+++ b/client/src/app/pages/common-components/side-panel/side-panel.html
@@ -17,7 +17,7 @@
       (click)="toggleTheme()"
     ></p-button>
     <p-button
-      severity="contrast"
+      severity="primary"
       [rounded]="true"
       icon="pi pi-cog"
       (click)="toggleTheme()"
