--- a/client/src/app/pages/esperienza/esperienza.html
+++ b/client/src/app/pages/esperienza/esperienza.html
@@ -1,1 +1,94 @@
-<p>esperienza works!</p>
+<div class="px-2 mt-3 sm:px-4 md:mt-6 md:px-6">
+  <p-stepper [value]="1">
+    <p-step-item [value]="1">
+      <p-step>Database Developer - Altea In</p-step>
+      <p-step-panel>
+        <ng-template #content let-activateCallback="activateCallback">
+          <div class="flex flex-col h-48">
+            <div class="flex-auto flex justify-center items-center font-medium">
+              <div>
+                <p-fieldset>
+                  <ng-template #header>
+                    <div class="flex items-center gap-2">
+                      <p-avatar image="/esperienza/altea.jpg" shape="circle" />
+                      <span class="font-bold vertical-align-middle">Altea In</span>
+                    </div>
+                  </ng-template>
+                  <p class="m-0">
+                    12/12/2022 - 12/12/2023: Database Developer
+                    <br />
+                    Sviluppo e manutenzione di database SQL Server per clienti aziendali.
+                  </p>
+                </p-fieldset>
+              </div>
+            </div>
+          </div>
+          <div class="py-4">
+            <p-button label="Next" (onClick)="activateCallback(2)" />
+          </div>
+        </ng-template>
+      </p-step-panel>
+    </p-step-item>
+
+    <p-step-item [value]="2">
+      <p-step>Frontend Developer - SCAI ITEC</p-step>
+      <p-step-panel>
+        <ng-template #content let-activateCallback="activateCallback">
+          <div class="flex flex-col h-48">
+            <div class="flex-auto flex justify-center items-center font-medium">
+              <div class="mt-4">
+                <p-fieldset>
+                  <ng-template #header>
+                    <div class="flex items-center gap-2">
+                      <p-avatar image="/esperienza/altea.jpg" shape="circle" />
+                      <span class="font-bold vertical-align-middle">SCAI ITEC</span>
+                    </div>
+                  </ng-template>
+                  <p class="m-0">
+                    12/12/2022 - 12/12/2023: Database Developer
+                    <br />
+                    Sviluppo e manutenzione di database SQL Server per clienti aziendali.
+                  </p>
+                </p-fieldset>
+              </div>
+            </div>
+          </div>
+          <div class="flex py-6 gap-2">
+            <p-button label="Back" severity="secondary" (onClick)="activateCallback(1)" />
+            <p-button label="Next" (onClick)="activateCallback(3)" />
+          </div>
+        </ng-template>
+      </p-step-panel>
+    </p-step-item>
+
+    <p-step-item [value]="3">
+      <p-step>Frontend Developer - Dedagroup</p-step>
+      <p-step-panel>
+        <ng-template #content let-activateCallback="activateCallback">
+          <div class="flex flex-col h-48">
+            <div class="flex-auto flex justify-center items-center font-medium">
+              <div class="mt-4">
+                <p-fieldset>
+                  <ng-template #header>
+                    <div class="flex items-center gap-2">
+                      <p-avatar image="/esperienza/altea.jpg" shape="circle" />
+                      <span class="font-bold vertical-align-middle">Dedagroup</span>
+                    </div>
+                  </ng-template>
+                  <p class="m-0">
+                    12/12/2022 - 12/12/2023: Database Developer
+                    <br />
+                    Sviluppo e manutenzione di database SQL Server per clienti aziendali.
+                  </p>
+                </p-fieldset>
+              </div>
+            </div>
+          </div>
+          <div class="py-6">
+            <p-button label="Back" severity="secondary" (onClick)="activateCallback(2)" />
+          </div>
+        </ng-template>
+      </p-step-panel>
+    </p-step-item>
+  </p-stepper>
+</div>
