--- a/client/src/app/pages/skills/skills.html
+++ b/client/src/app/pages/skills/skills.html
@@ -1,1 +1,31 @@
-<p>skills works!</p>
+<div class="px-2 mt-3 sm:px-4 md:mt-6 md:px-6">
+  <h1>Competenze</h1>
+  <div>
+    <h2 class="mb-2" class="mb-2">Italiano</h2>
+    <p-progressbar [value]="100" />
+  </div>
+  <div>
+    <h2 class="mb-2">Inglese</h2>
+    <p-progressbar [value]="80" />
+  </div>
+  <div>
+    <h2 class="mb-2">HTML/CSS</h2>
+    <p-progressbar [value]="80" />
+  </div>
+  <div>
+    <h2 class="mb-2">JS/TS</h2>
+    <p-progressbar [value]="70" />
+  </div>
+  <div>
+    <h2 class="mb-2">Angular</h2>
+    <p-progressbar [value]="60" />
+  </div>
+  <div>
+    <h2 class="mb-2">React</h2>
+    <p-progressbar [value]="40" />
+  </div>
+  <div>
+    <h2 class="mb-2">SQL</h2>
+    <p-progressbar [value]="30" />
+  </div>
+</div>
