Fix: some general improvments

--- a/client/src/app/pages/common-components/side-panel/side-panel.html
+++ b/client/src/app/pages/common-components/side-panel/side-panel.html
@@ -16,11 +16,11 @@
       icon="pi pi-moon"
       (click)="toggleTheme()"
     ></p-button>
-    <p-button
+    <!-- <p-button
       severity="primary"
       [rounded]="true"
       icon="pi pi-cog"
       (click)="toggleTheme()"
-    ></p-button>
+    ></p-button> -->
   </div>
 </div>
