--- a/client/src/app/pages/esperienza/esperienza.html
+++ b/client/src/app/pages/esperienza/esperienza.html
@@ -40,7 +40,7 @@
                 <p-fieldset>
                   <ng-template #header>
                     <div class="flex items-center gap-2">
-                      <p-avatar image="/esperienza/altea.jpg" shape="circle" />
+                      <p-avatar image="/esperienza/scai.jpg" shape="circle" />
                       <span class="font-bold vertical-align-middle">SCAI ITEC</span>
                     </div>
                   </ng-template>
@@ -53,7 +53,7 @@
               </div>
             </div>
           </div>
-          <div class="flex py-6 gap-2">
+          <div class="flex py-4 gap-2">
             <p-button label="Back" severity="secondary" (onClick)="activateCallback(1)" />
             <p-button label="Next" (onClick)="activateCallback(3)" />
           </div>
@@ -71,7 +71,7 @@
                 <p-fieldset>
                   <ng-template #header>
                     <div class="flex items-center gap-2">
-                      <p-avatar image="/esperienza/altea.jpg" shape="circle" />
+                      <p-avatar image="/esperienza/deda.jpg" shape="circle" />
                       <span class="font-bold vertical-align-middle">Dedagroup</span>
                     </div>
                   </ng-template>
@@ -84,7 +84,7 @@
               </div>
             </div>
           </div>
-          <div class="py-6">
+          <div class="py-4">
             <p-button label="Back" severity="secondary" (onClick)="activateCallback(2)" />
           </div>
         </ng-template>
