--- a/client/src/app/pages/skills/skills.html
+++ b/client/src/app/pages/skills/skills.html
@@ -13,6 +13,10 @@
     <p-progressbar [value]="80" />
   </div>
   <div>
+    <h2 class="mb-2">Node.js</h2>
+    <p-progressbar [value]="70" />
+  </div>
+  <div>
     <h2 class="mb-2">JS/TS</h2>
     <p-progressbar [value]="70" />
   </div>
